# wireplug

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
bpf/: bpf.c
client/: Cargo.toml
client/src/: announce.rs  config.rs  daemon.rs  main.rs  nat.rs  netlink.rs  netstat.rs  protocol.rs  utils.rs  wg_interface.rs
rc/openbsd/: wireplugd  wpcod
server/: Cargo.toml
server/src/: config.rs  lockdown.rs  main.rs  peering.rs  server.rs  status.rs  stun.rs
server/src/relay/: mod.rs  port_mapping.rs
shared/: Cargo.toml
shared/src/: lib.rs  protocol.rs
wppriv/: Cargo.toml
wppriv/src/: main.rs  pfctl.rs
