[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }

wireguard-control = { path = "../../innernet/wireguard-control" }
publicip = { git = "https://github.com/tonarino/innernet.git", package = "publicip"}
ipnet = "2.11.0"
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
rand = "0.9.1"
getifaddrs = "0.2.0"
webpki-roots = "1.0.1"
rustls = { version = "0.23.29", default-features = false, features = ["std", "ring"] }
anyhow = "1.0.98"
log = "0.4.27"
