[package]
name = "wireplugd"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared" }
serde = { version = "1.0", default-features = false }
postcard = { version = "1.1", features=["alloc"]}
ipnet = "2.11.0"
clap = { version = "4.5.40", features = ["derive"] }
toml = "0.8.23"
rand = "0.9.1"
webpki-roots = "1.0.1"
rustls = { version = "0.23.29", default-features = false, features = ["std", "ring"] }
anyhow = "1.0.98"
log = "0.4.27"
innernet-publicip = "1.7.0"
wireguard-control = "1.7.1"
getifaddrs = "0.6.2"

[target.'cfg(target_os = "linux")'.dependencies]
netlink-packet-core = "0.7"
netlink-packet-route = "0.21"
netlink-request = { version = "1.7.0"}
libc = "0.2"
