[package]
name = "wpcod"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
shared = { path = "../shared" }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
chrono = "0.4.41"
tokio-rustls = { version = "0.26.2", default-features = false, features = ["ring"] }
clap = "4.5.41"
toml = "0.9.3"
anyhow = "1.0.98"
log = "0.4.27"
libc = "0.2.178"

[target.'cfg(target_os = "openbsd")'.dependencies]
openbsd = { git = "https://github.com/joshua-cooper/openbsd-rs", version = "0.1.2" }
